--- a/index.html
+++ b/index.html
@@ -795,8 +795,8 @@ Project Area
     </section><!--==============================
 Team Area  
 ==============================-->
-    <section class="bg-top-center overflow-hidden space" data-bg-src="assets/img/bg/team_bg_5.jpg">
-        <!-- <div class="container th-container4">
+    <!-- <section class="bg-top-center overflow-hidden space" data-bg-src="assets/img/bg/team_bg_5.jpg">
+     <div class="container th-container4">
             <div class="title-area text-center">
                 <span class="sub-title sub-title3">Team Members</span>
                 <h2 class="sec-title text-white">Meet Our Dedicated Team</h2>
@@ -1064,13 +1064,13 @@ Team Area
                         class="far fa-arrow-right"></i></button>
             </div>
 
-        </div> -->
-    </section>
+        </div> 
+    </section> -->
 
     <!--==============================
 Feature Area  
 ==============================-->
-    <div class="why-sec-v5 overflow-hidden">
+    <div class="why-sec-v5 overflow-hidden space">
         <div class="container th-container4">
             <div class="row align-items-center">
                 <div class="col-xl-5">
